WIP on PQ index. Can be faster than brutefoce, but results baad

--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ apply plugin: 'com.google.protobuf'
 apply plugin: 'idea'
 
 mainClassName = 'org.vitrivr.cottontail.CottontailKt'
-applicationDefaultJvmArgs = ["-Xms2G", "-Xmx4G"]
+applicationDefaultJvmArgs = ["-Xms2G", "-Xmx8G"]
 
 sourceCompatibility = 1.8
 
@@ -36,7 +36,8 @@ repositories {
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
     kotlinOptions {
-        freeCompilerArgs = ["-Xinline-classes"]
+//        freeCompilerArgs = ["-Xinline-classes"]
+        freeCompilerArgs = ["-Xinline-classes", "-Xno-param-assertions", "-Xno-call-assertions"]
     }
 }
 compileTestKotlin {
