Making query-time hints work with August implementation
report PID to simplify killing process if it hangs
update protos
disable cli, change path, gitignore test results

--- a/config.json
+++ b/config.json
@@ -1,8 +1,9 @@
 {
-  "root": "/cottontaildb-data",
+  "root": "./cottontaildb-data",
   "memoryConfig": {
     "forceUnmapMappedFiles": true,
     "dataPageShift": 22,
     "cataloguePageShift": 20
-  }
+  },
+  "cli": false
 }
